--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = [
     {name = "Angel Gongora",email = "josangelo.jose@gmail.com"}
 ]
+package-mode = false
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn (>=0.34.2,<0.35.0)",
@@ -21,6 +22,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^4.2.0"
+black = "^25.1.0"
+flake8 = "^7.2.0"
+isort = "^6.0.1"
 
 [tool.black]
 line-length = 88
