--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ black = "^25.1.0"
 flake8 = "^7.2.0"
 isort = "^6.0.1"
 pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
 
 [tool.black]
 line-length = 88
