--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,17 @@ isort = "^6.0.1"
 pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
 
-[tool.black]
-line-length = 88
-
 [tool.isort]
 profile = "black"
 line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.black]
+line-length = 88
 
 [tool.flake8]
 max-line-length = 88
