--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
 addopts = -ra -q
-testpaths = tests
 pythonpath = .
+testpaths = tests
+asyncio_mode = auto
+
+[pytest-asyncio]
+asyncio_fixture_scope = function
