--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "uvicorn (>=0.34.2,<0.35.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "boto3 (>=1.38.4,<2.0.0)"
 ]
 
 
