Add version with endpoints

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,6 @@
+# pytest.ini
 [pytest]
 addopts = -ra -q
 pythonpath = .
 testpaths = tests
 asyncio_mode = auto
-
-[pytest-asyncio]
-asyncio_fixture_scope = function
