--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "boto3 (>=1.38.4,<2.0.0)"
+    "boto3 (>=1.38.4,<2.0.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)"
 ]
 
 
@@ -29,6 +30,7 @@ flake8 = "^7.2.0"
 isort = "^6.0.1"
 pytest = "^8.3.5"
 pytest-asyncio = "^0.26.0"
+pytest-mock = "^3.14.0"
 
 [tool.isort]
 profile = "black"
