--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,23 @@
-ENV=local
+# App
+ENVIRONMENT=development
+
+# Postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+POSTGRES_DB=candidly_db
+POSTGRES_USER=candidly
+POSTGRES_PASSWORD=candidly
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+
+# S3
 S3_ENDPOINT=http://s3:9000
-S3_BUCKET=audios
-ASSEMBLY_MOCK=true
+S3_BUCKET=local-bucket
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+
+# AssemblyAI
+ASSEMBLYAI_API_KEY=tu_api_key_aqui
