--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,15 @@ dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
     "boto3 (>=1.38.4,<2.0.0)",
-    "pydantic-settings (>=2.9.1,<3.0.0)"
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "assemblyai (>=0.40.2,<0.41.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)",
+    "sqlalchemy (>=2.0.40,<3.0.0)",
+    "alembic (>=1.15.2,<2.0.0)",
+    "celery (>=5.5.2,<6.0.0)",
+    "redis (>=5.3.0,<6.0.0)"
 ]
 
 
