add upload audio to s3 using celery

--- a/.env.local
+++ b/.env.local
@@ -15,7 +15,7 @@ REDIS_DB=0
 
 # S3
 S3_ENDPOINT=http://s3:9000
-S3_BUCKET=local-bucket
+S3_BUCKET=audios
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin
 
