--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "alembic (>=1.15.2,<2.0.0)",
     "celery (>=5.5.2,<6.0.0)",
-    "redis (>=5.3.0,<6.0.0)"
+    "redis (>=5.3.0,<6.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 
