add taks to process audio into assemblyai

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # App
-ENVIRONMENT=development
+ENV=dev
 
 # Postgres
 POSTGRES_HOST=db
@@ -20,4 +20,5 @@ AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin
 
 # AssemblyAI
-ASSEMBLYAI_API_KEY=tu_api_key_aqui
+ASSEMBLYAI_API_KEY=317e246fda364b84bc55bc3df273056c
+ASSEMBLY_MOCK=false
